# bacteria

./: .dockerignore  .env.example  .gitignore  AI_operating_system_video_transcriptions.md  CLAUDE.md  Dockerfile  architecture.excalidraw  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  python-ai-project-structure.md
.claude/: settings.json
.claude/skills/memory-manager/: SKILL.md
.github/workflows/: deploy.yml
context/identity/: soul.md
context/memory/: +34600000000.md  MEMORY.md  cli.md  cli_user.md  unknown.md
definition/: architecture.excalidraw  definition.md  spec.md
references/: README.md
scripts/migrations/: 0001_create_jobs.sql
specs/architecture/: architecture.md
specs/architecture/decisions/: 0001-db-backed-queue.md  0002-provider-agnostic-agents.md  0003-no-uv-workspace.md  0004-no-separate-llms-module.md  index.md
specs/features/agents/: agent-cognitive-structure.md  agent-tools-mcp.md  agent.md
specs/features/api/: api.md
specs/features/cleanup/: spec-consistency.md
specs/features/cli/: cli-agent.md
specs/features/deployment/: local-to-cloud.md
specs/features/example/: example-feature.md
specs/features/memory/: memory.md
specs/features/observability/: langfuse-agent-tracing.md  observability-hardening.md  observability.md  otel.md
specs/features/queue/: queue-and-worker.md
specs/features/scaffold/: project-scaffold.md
specs/features/workflows/: context-refactor.md  webhook-to-agent-flow.md  workflow-engine.md
src/bacteria/: __init__.py  cli.py  dependencies.py  settings.py
src/bacteria/agents/: __init__.py  claude.py
src/bacteria/api/: __init__.py
src/bacteria/channels/: __init__.py  whatsapp.py
src/bacteria/db/: __init__.py
src/bacteria/entities/: context.py  event.py  job.py
src/bacteria/nodes/: __init__.py  classify_intent.py  emit_agent_job.py  load_context.py  parallel.py  parse_whatsapp_payload.py  route_by_intent.py  run_agent.py  save_message.py  send_reply.py  verify_signature.py
src/bacteria/observability/: __init__.py  agent_tracer.py  context.py  langfuse.py  logging.py  metrics.py  sentry.py  tracing.py
src/bacteria/queue/: __init__.py  postgres.py
tests/: test_scaffold.py
(+10 files in other folders)
