[project]
name = "bacteria"
version = "0.1.0"
description = "A self-hosted AI operating system — trigger-based automations, scheduled workflows, and conversational agents under one infrastructure."
readme = "README.md"
authors = [
    { name = "GuillermoLB", email = "guillelb99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "claude-agent-sdk>=0.1.61",
    "greenlet>=3.4.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "langfuse>=2.33.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
bacteria-chat   = "bacteria.cli:chat"
bacteria-worker = "bacteria.worker.main:main"
bacteria-api    = "bacteria.api:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
